--- a/css/min-990-breakpoint.css
+++ b/css/min-990-breakpoint.css
@@ -56,5 +56,9 @@
     div.slider-title h1 {
         font-size: 70px;
     }
+
+    div.title1_container span{
+        font-size: 6vw;
+    }
   
 }
