--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,6 @@ iframe {
 
 .value-item {
     transition: transform 200ms linear;
-    width: 185px;
     background-color: #ebebeb;
     border-radius: 12px;
     margin-top: 20px;
@@ -300,8 +299,6 @@ div.value-item.active .value-title {
 
 .cards-style {
     
-    width: 137px;
-    height: 190px;
     font-family: Avenir-BoldCn;
     border-radius: 12px;
     font-size: 18px;
@@ -314,14 +311,17 @@ div.value-item.active .value-title {
 .img-card {
 
     filter: invert(26%) sepia(0%) saturate(2840%) hue-rotate(222deg) brightness(92%) contrast(69%);
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
 }
 
 .title-card {
-    line-height: 1px;
+    font-size : 22px;
 }
 
+.card-text {
+    font-size: 17px;
+}
 .order-btn {
     background-color: #dc0000;
     color: white;
@@ -409,7 +409,7 @@ div.value-item.active .value-title {
 }
 
 #slide3{
-    background-image: url(../assets/PH.jpg);
+    background-image: url(../assets/covid-19.jpg);
 
 }
 
@@ -430,62 +430,17 @@ div.text-box p {
 
 
 
-
-.hover-active {
-    z-index: 2;
-    position: absolute;
-    top: 15px;
-    display: none;
-
-}
-
-
-  div.cards-style:hover {
-      background-color :rgba(84,84,84,0.95);
-      padding: 16px;
-
-  }
-
-  div.cards-style:hover p.title-card {
-
-    display: none;
-  }
-  div.cards-style:hover img.img-card {
-
-    display: none;
-  }
-  div.cards-style:hover div.hoveroff-btn{
-      display: none;
-  }
-
-  
-  div.hover-active p{
-    color: white;
-    font-family: Avenir-Bold;
-    font-size: 9px;
-    line-height: 10px;
-    
-}
-
-  div.cards-style:hover div.hover-active {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-
   }
   
   .slider-title {
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 3;
+
     color: white;
     font-family: Avenir-Reg;
-    top: 30px;
   }
 
   div.slider-title h1 {
       font-size: 20px;
+      color:white
   }
 
 
