--- a/css/min-720-breakpoint.css
+++ b/css/min-720-breakpoint.css
@@ -77,8 +77,7 @@
     }
 
     div.value-item {
-        width: 15vw;
-        height: 15vw;
+        
 
         max-width: 180px;
         max-height: 180px;
@@ -143,4 +142,9 @@
     .footer-info {
         font-size: 21px;
     }
+    .scene{
+        height: 200px;
+    }
+
+    
 }
