--- a/css/style.css
+++ b/css/style.css
@@ -493,3 +493,60 @@ input.form-control {
     font-family: Avenir-BoldCn;
     border-radius: 5px;
 }
+
+
+.value-item {
+    transition: transform 200ms linear;
+    background-color: #ebebeb;
+    border-radius: 12px;
+    margin-top: 20px;
+    padding: 20px;
+    box-shadow: 3px 2px 3px 0px rgba(235, 235, 235, 1);
+    flex-wrap: wrap;
+    perspective: 1000px;
+}
+
+
+  
+.scene {
+    height: 90px;
+    perspective: 600px;
+    max-width: 200px;
+    border:none;
+    
+}
+.card {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+  }
+
+  .card__face {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  .card__face--front {
+    background-color: #ebebeb;
+    border-radius: 12px;
+    margin-top: 20px;
+    box-shadow: 3px 2px 3px 0px rgba(235, 235, 235, 1);
+  }
+  
+  .card__face--back {
+    background-color: #ebebeb;
+    border-radius: 12px;
+    margin-top: 20px;
+    box-shadow: 3px 2px 3px 0px rgba(235, 235, 235, 1);    transform: rotateY( 180deg );
+  }
+  .card:hover {
+    transform: rotateY(180deg);
+  }
+
+  .card-back-text {
+      font-family: Avenir-BoldCn;
+  }
