--- a/css/min-990-breakpoint.css
+++ b/css/min-990-breakpoint.css
@@ -3,6 +3,9 @@
         height: 13vh;
         
     }
+    .margin-header{
+        margin-top: 13vh;
+    }
     img.logo {
         width: 20vw;
     }
